--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<!-- Navbar -->
+<app-navbar></app-navbar>
+
+<div class="container mt-5">
+  <router-outlet></router-outlet>
+</div>
+
