--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,14 @@
-<p>home works!</p>
+<h2>Cartelera</h2>
 
 <div class="row" *ngIf="movies.length">
   <div class="col">
     <app-slideshow [movies]="movies"></app-slideshow>
   </div>
 </div>
+
+<h2 class="mt-5">Películas</h2>
+
+<app-peliculas-poster-grid
+  *ngIf="movies.length"
+  [movies]="movies"
+></app-peliculas-poster-grid>
