--- a/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
+++ b/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
@@ -1,15 +1,26 @@
 <div class="row">
   <div class="col-md-3 mb-5" *ngFor="let movie of movies">
-    <img class="img-fluid poster" src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="">
+    <img
+      class="img-fluid poster"
+      src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}"
+      alt=""
+    />
 
     <div>
       <h3>{{ movie.title }}</h3>
       <div class="row">
         <div class="col-10 text-white">
-          *************
+          <star-rating
+            [value]="movie.vote_average"
+            totalstars="10"
+            checkedcolor="peru"
+            uncheckedcolor="black"
+            size="17px"
+            readonly="false"
+          ></star-rating>
         </div>
         <div class="col-2 text-white">
-          {{ movie.vote_average | number: '1.1' }}
+          {{ movie.vote_average | number: "1.1" }}
         </div>
       </div>
     </div>
