--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,13 +2,13 @@
 
 <div class="row" *ngIf="movies.length">
   <div class="col">
-    <app-slideshow [movies]="movies"></app-slideshow>
+    <app-slideshow [movies]="moviesSlideshow"></app-slideshow>
   </div>
 </div>
 
 <h2 class="mt-5">Películas</h2>
 
-<app-peliculas-poster-grid
+<app-movies-poster-grid
   *ngIf="movies.length"
   [movies]="movies"
-></app-peliculas-poster-grid>
+></app-movies-poster-grid>
