--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,17 +3,24 @@
     <a class="navbar-brand" routerLink="/home">Movies</a>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
       <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
-      <form class="d-flex">
+      <div class="d-flex">
         <input
+          #txtSearch
+          (keyup.enter)="searchMovie(txtSearch.value)"
           class="form-control me-2"
           type="search"
           placeholder="Search movie"
           aria-label="Search"
         />
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+        <button
+          (click)="searchMovie(txtSearch.value)"
+          class="btn btn-outline-success"
+          type="submit"
+        >
+          Search
+        </button>
+      </div>
     </div>
   </div>
 </nav>
