Layout Movie Component

--- a/src/app/components/movies-poster-grid/movies-poster-grid.component.html
+++ b/src/app/components/movies-poster-grid/movies-poster-grid.component.html
@@ -4,6 +4,7 @@
       class="img-fluid poster"
       [src]="movie.poster_path | poster"
       alt=""
+      (click)="showMovie(movie)"
     />
 
     <div>
