--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/home">Movies</a>
+    <a class="navbar-brand" routerLink="/home">Películas</a>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
@@ -10,7 +10,7 @@
           (keyup.enter)="searchMovie(txtSearch.value)"
           class="form-control me-2"
           type="search"
-          placeholder="Search movie"
+          placeholder="Buscar películas"
           aria-label="Search"
         />
         <button
@@ -18,7 +18,7 @@
           class="btn btn-outline-success"
           type="submit"
         >
-          Search
+          Buscar
         </button>
       </div>
     </div>
