--- a/src/app/components/slideshow/slideshow.component.html
+++ b/src/app/components/slideshow/slideshow.component.html
@@ -14,7 +14,7 @@
     >
       <div class="movie-description">
         <h3>{{ movie.title }}</h3>
-        <p>{{ movie.overview | slice: 0:130 }}...</p>
+        <p>{{ movie.overview  }}...</p>
       </div>
     </div>
   </div>
