--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -1,51 +1,55 @@
-<div class="row" *ngIf="movie">
-  <div class="col-md-6">
-    <!-- image -->
-    <img
-      [src]="movie.poster_path | poster"
-      [alt]="movie.title"
-      class="img-fluid img-thumbnail"
-    />
-  </div>
+<div class="container">
+  <div class="row animate__animated animate__fadeIn" *ngIf="movie">
+    <div class="col-md-6">
+      <!-- image -->
+      <img
+        [src]="movie.poster_path | poster"
+        [alt]="movie.title"
+        class="img-fluid img-thumbnail ml-auto"
+      />
+    </div>
 
-  <div class="col-md-6">
-    <!-- detail -->
-    <h3>{{ movie.title }}</h3>
-    <div class="row">
-      <div class="col">
-        <star-rating
-          [value]="movie.vote_average"
-          totalstars="10"
-          checkedcolor="peru"
-          uncheckedcolor="black"
-          size="15px"
-          readonly="false"
-        ></star-rating>
-      </div>
-
-      <div class="col text-white">
-        {{ movie.vote_average | number: '1.1-2'}}
-      </div>
-
-      <div class="row  mt-3">
-        <div class="col text-white">
-          {{ movie.overview }}
-        </div>
-      </div>
-
-      <div class="row mt-5">
+    <div class="col-md-6">
+      <!-- detail -->
+      <h3>{{ movie.title }}</h3>
+      <div class="row">
         <div class="col">
-          <button (click)="goBack()" class="btn btn-outline-info">
-            Regresar
-          </button>
+          <star-rating
+            [value]="movie.vote_average"
+            totalstars="10"
+            checkedcolor="peru"
+            uncheckedcolor="black"
+            size="15px"
+            readonly="false"
+          ></star-rating>
+        </div>
+
+        <div class="col text-white">
+          {{ movie.vote_average | number: '1.1-2'}}
+        </div>
+
+        <div class="row  mt-3">
+          <div class="col text-white">
+            {{ movie.overview }}
+          </div>
+        </div>
+
+        <div class="row mt-5">
+          <div class="col">
+            <button (click)="goBack()" class="btn btn-outline-info">
+              Regresar
+            </button>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="row mt-5" *ngIf="cast">
-  <div class="col">
-    <app-cast-slideshow [cast]="cast"></app-cast-slideshow>
+
+  <div class="row mt-5" *ngIf="cast">
+    <div class="col">
+      <h2 class="mb-4">Casting</h2>
+      <app-cast-slideshow [cast]="cast"></app-cast-slideshow>
+    </div>
   </div>
 </div>
